test/kubernetes/e2e/features/auto_host_rewrite/testdata/auto_host_rewrite.yaml
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: gw
spec:
  gatewayClassName: kgateway
  listeners:
  - protocol: HTTP
    port: 8080
    name: http
    allowedRoutes:
      namespaces:
        from: All
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: httpbin-route
spec:
  parentRefs:
    - name: gw
  hostnames:
    - "foo.local"
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /headers-override
      filters:
      - type: URLRewrite
        urlRewrite:
          hostname: "foo.override" # this will override the autoHostRewrite from TrafficPolicy
          path:
            type: ReplaceFullPath
            replaceFullPath: /headers
      backendRefs:
        - name: httpbin-static
          kind: Backend
          group: gateway.kgateway.dev
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
        - name: httpbin-static
          kind: Backend
          group: gateway.kgateway.dev
---
apiVersion: gateway.kgateway.dev/v1alpha1
kind: TrafficPolicy
metadata:
  name: auto-host-rewrite
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: httpbin-route
  autoHostRewrite: true
---
apiVersion: gateway.kgateway.dev/v1alpha1
kind: Backend
metadata:
  name: httpbin-static
spec:
  type: Static
  static:
    hosts:
      - host: httpbin.default.svc # static reference to common httpbin k8s svc
        port: 8000
