test/kubernetes/e2e/features/auto_host_rewrite/testdata/invalid_trafficpolicy.yaml
apiVersion: gateway.kateway.dev/v1alpha1
kind: TrafficPolicy
metadata:
  name: bad-policy
  namespace: auto-host-rewrite
spec:
  targetRef:
    group: ""
    kind: Service
    name: echo
    namespace: auto-host-rewrite
  hostRewrite: "somehost.local"
  autoHostRewrite: true
