test/kubernetes/e2e/features/auto_host_rewrite/testdata/trafficpolicy.yaml
apiVersion: gateway.kgateway.dev/v1alpha1
kind: TrafficPolicy
metadata:
  name: auto-host-rewrite
  namespace: auto-host-rewrite
spec:
  # ✓ use 'targets' here
  targets:
    - group:    gateway.networking.k8s.io
      kind:     HTTPRoute
      name:     echo-route
      namespace: auto-host-rewrite
  autoHostRewrite: true
